--- a/chumo.css
+++ b/chumo.css
@@ -61,9 +61,8 @@
 
 		.arrow {
 			stroke: black;
-			stroke-width: 0px;
-			fill:black;
-			opacity: 0.5;
+			stroke-width: 0.5px;
+			fill:rgba(0,0,0,0.2);
 		}
 
 		circle {
